--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,16 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+
+
+
+
+
 		<!--		<dependency>-->
 		<!--			<groupId>org.springframework.security</groupId>-->
 		<!--			<artifactId>spring-security-test</artifactId>-->
