--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,5 +20,6 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto=create
 
 spring.datasource.initialization-mode=always
-
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
 
