--- a/pom.xml
+++ b/pom.xml
@@ -54,30 +54,34 @@
 		</dependency>
 
 
-<!--				<dependency>-->
-<!--					<groupId>io.jsonwebtoken</groupId>-->
-<!--					<artifactId>jjwt</artifactId>-->
-<!--					<version>0.9.1</version>-->
-<!--				</dependency>-->
+				<dependency>
+					<groupId>io.jsonwebtoken</groupId>
+					<artifactId>jjwt</artifactId>
+					<version>0.9.1</version>
+				</dependency>
 
-<!--				<dependency>-->
-<!--					<groupId>org.springframework.security</groupId>-->
-<!--					<artifactId>spring-security-test</artifactId>-->
-<!--					<version>5.4.5</version>-->
-<!--					<scope>test</scope>-->
-<!--				</dependency>-->
+				<dependency>
+					<groupId>org.springframework.security</groupId>
+					<artifactId>spring-security-test</artifactId>
+					<version>5.4.5</version>
+					<scope>test</scope>
+				</dependency>
 
-<!--				<dependency>-->
-<!--					<groupId>org.springframework.security</groupId>-->
-<!--					<artifactId>spring-security-config</artifactId>-->
-<!--					<version>5.4.5</version>-->
-<!--				</dependency>-->
+				<dependency>
+					<groupId>org.springframework.security</groupId>
+					<artifactId>spring-security-config</artifactId>
+					<version>5.4.5</version>
+				</dependency>
 
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.boot</groupId>-->
-<!--			<artifactId>spring-boot-starter-security</artifactId>-->
-<!--		</dependency>-->
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>5.4.6</version>
+		</dependency>
 
 
 	</dependencies>
