--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,4 +22,5 @@ spring.jpa.hibernate.ddl-auto=create
 spring.datasource.initialization-mode=always
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
+#server.port=8081
 
