--- a/pom.xml
+++ b/pom.xml
@@ -52,36 +52,45 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 			<version>2.5.0</version>
 		</dependency>
-
-
-				<dependency>
-					<groupId>io.jsonwebtoken</groupId>
-					<artifactId>jjwt</artifactId>
-					<version>0.9.1</version>
-				</dependency>
-
-				<dependency>
-					<groupId>org.springframework.security</groupId>
-					<artifactId>spring-security-test</artifactId>
-					<version>5.4.5</version>
-					<scope>test</scope>
-				</dependency>
-
-				<dependency>
-					<groupId>org.springframework.security</groupId>
-					<artifactId>spring-security-config</artifactId>
-					<version>5.4.5</version>
-				</dependency>
-
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>2.0.2</version>
+        </dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-core</artifactId>
-			<version>5.4.6</version>
-		</dependency>
+
+
+		<!--				<dependency>-->
+<!--					<groupId>io.jsonwebtoken</groupId>-->
+<!--					<artifactId>jjwt</artifactId>-->
+<!--					<version>0.9.1</version>-->
+<!--				</dependency>-->
+
+<!--				<dependency>-->
+<!--					<groupId>org.springframework.security</groupId>-->
+<!--					<artifactId>spring-security-test</artifactId>-->
+<!--					<version>5.4.5</version>-->
+<!--					<scope>test</scope>-->
+<!--				</dependency>-->
+
+<!--				<dependency>-->
+<!--					<groupId>org.springframework.security</groupId>-->
+<!--					<artifactId>spring-security-config</artifactId>-->
+<!--					<version>5.4.5</version>-->
+<!--				</dependency>-->
+
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-security</artifactId>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.security</groupId>-->
+<!--			<artifactId>spring-security-core</artifactId>-->
+<!--			<version>5.4.6</version>-->
+<!--		</dependency>-->
 
 
 	</dependencies>
