Altered SQL - working now. Next up: file-upload and DTO

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,7 @@ spring.datasource.initialization-mode=always
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
 
+# App Properties
+novi.sec.jwtSecret= noviHogeschoolSecretKey
+novi.sec.jwtExpirationMs= 86400000
+
